<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/list_apps_iv_app_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_ac_horizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_apps_cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_8sdp"
        android:paddingBottom="@dimen/_1sdp">

        <ImageView
            android:id="@+id/list_apps_iv_thumb"
            android:layout_width="@dimen/_53sdp"
            android:layout_height="@dimen/_53sdp"
            android:layout_margin="@dimen/_10sdp"
            android:contentDescription="@string/label_thumb"
            android:src="@drawable/thumb_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/list_apps_tv_app_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_apps_tv_app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/list_apps_mr_app_ratings"
            app:layout_constraintEnd_toStartOf="@+id/list_apps_tv_app_download"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/list_apps_iv_thumb"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


        <com.chaek.android.RatingBar
            android:id="@+id/list_apps_mr_app_ratings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            app:layout_constraintBottom_toTopOf="@+id/list_apps_tv_app_installs"
            app:layout_constraintEnd_toStartOf="@+id/list_apps_tv_app_download"
            app:layout_constraintStart_toStartOf="@+id/list_apps_tv_app_name"
            app:layout_constraintTop_toBottomOf="@+id/list_apps_tv_app_name"
            app:rating_flag="TEN"
            app:rating_star_color="#f9d02f"
            app:rating_star_empty_color="#c2c0c0"
            app:rating_star_height="@dimen/_13sdp"
            app:rating_star_margin="@dimen/_3sdp"
            app:rating_star_tint="true"
            app:rating_star_width="@dimen/_13sdp"
            app:rating_start_count="5" />

        <TextView
            android:id="@+id/list_apps_tv_app_installs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/label_installs"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/list_apps_mr_app_ratings"
            app:layout_constraintTop_toBottomOf="@+id/list_apps_mr_app_ratings" />


        <TextView
            android:id="@+id/list_apps_tv_app_download"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:background="@drawable/shape_category_selected"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_1sdp"
            android:text="@string/download"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/list_apps_iv_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/list_apps_tv_app_name"
            app:layout_constraintTop_toTopOf="@+id/list_apps_iv_thumb" />


        <ImageView
            android:id="@+id/list_apps_iv_ad"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/ic_ac_ad"
            android:tint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/ic_ac_ad_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>