<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_headre"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_feedback_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_headre">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_details_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLines="1"
                android:text="@string/describe_your_problem"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_details_label_star"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:maxLines="1"
                android:text="*"
                android:textColor="@color/red_800"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintStart_toEndOf="@+id/tv_details_label"
                app:layout_constraintTop_toTopOf="@+id/tv_details_label" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_issue_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_label">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/Lay3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    app:layout_constraintTop_toBottomOf="@+id/linear3">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_23sdp"
                        android:background="@android:color/transparent"
                        android:gravity="top"
                        android:hint="@string/enter_your_issue_details"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:maxLength="1000"
                        android:padding="@dimen/_5sdp"
                        android:scrollbars="vertical"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/_1sdp"
                        android:paddingLeft="@dimen/_1sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:paddingRight="@dimen/_10sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/tv_current_length"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="0"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12ssp" />


                        <TextView
                            android:id="@+id/tv_total_length"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:text="/1000"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/upload_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:maxLines="1"
                android:text="@string/upload_image"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_issue_detail" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_upload_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/upload_image">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/Lay4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear3">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_media"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:itemCount="4" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_26sdp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/rv_media"
                        app:layout_constraintTop_toTopOf="parent">

                        <RelativeLayout
                            android:id="@+id/relative_img_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/iv_add"
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_centerInParent="true"
                                android:contentDescription="@string/upload_image"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_feedback_add"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/counter_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:contentDescription="@string/upload_image"
                        android:orientation="horizontal"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/tv_current_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="0"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tv_total_image"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:text="/4"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_enter_email_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:maxLines="1"
                android:text="@string/enter_email"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_upload_image" />

            <TextView
                android:id="@+id/tv_enter_email_star"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:maxLines="1"
                android:text="*"
                android:textColor="@color/red_800"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintStart_toEndOf="@+id/tv_enter_email_hint"
                app:layout_constraintTop_toTopOf="@+id/tv_enter_email_hint" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_email_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_enter_email_hint">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/Lay5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear3">

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="top"
                        android:hint="@string/contact_information"
                        android:importantForAutofill="no"
                        android:maxLength="250"
                        android:padding="@dimen/_10sdp"
                        android:scrollbars="vertical"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardCornerRadius="@dimen/_4sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toBottomOf="@+id/card_email_detail">


                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintTop_toBottomOf="@+id/card_email_detail" />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>